--- a/section-61.adoc
+++ b/section-61.adoc
@@ -1,26 +1,20 @@
 [#61_0]
-== SCENARIO GROUP
-TWO: THE DESERT
-FOX
+== SCENARIO GROUP TWO: THE DESERT FOX
 
 [#61_1]
 === GENERAL DESCRIPTION
 
-The Desert Fox scenario covers the arrival of the
-Germany Africa Korps and General Rommel.
-There are two scenarios that may be played from
-this set-up. The first is the initial arrival of Rommel and the race for Tobruk. The second is a complete campaign, starting from the same point.
+The Desert Fox scenario covers the arrival of the Germany Africa Korps and
+General Rommel.  There are two scenarios that may be played from this set-up.
+The first is the initial arrival of Rommel and the race for Tobruk. The second
+is a complete campaign, starting from the same point.
 
 [#61_2]
-=== SCENARIO LENGTH AND
-DURATION
+=== SCENARIO LENGTH AND DURATION
 
-The race for Tobruk scenario begins with the 3rd
-
-OpStage of Game-Turn 26 and ends at the conclu
-sion of the 3rd OpStage of Game-Turn 38. It
-
-should take from 75 to 125 hours to play.
+The race for Tobruk scenario begins with the 3rd OpStage of Game-Turn 26 and
+ends at the conclu sion of the 3rd OpStage of Game-Turn 38. It should take from
+75 to 125 hours to play.
 
 [#61_3]
 === COMMONWEALTH FORCES
@@ -28,52 +22,46 @@ should take from 75 to 125 hours to play.
 [#61_31]*[61.31]* Commonwealth Land Forces
 
 Initial Deployment (Hex: Units)
-A2022: 3rd Armored Bde (2 Arm); ( Assg: 6th
-RTR [4/7]; 3rd Hus); HQ: 2nd Armored Division;
-Trucks: 20 Medium.
-A2021: 2nd Support Group (2 Arm); Trucks: 25
-Medium, 5 Heavy.
-C4507: 3rd In Motor Bde; Trucks: 5 Light, 25
-Medium.
 
-Msus (84004): Ist Coy French Motor Marines
-Trucks: 3 Medium.
+A2022: 3rd Armored Bde (2 Arm); ( Assg: 6th RTR [4/7]; 3rd Hus); HQ: 2nd Armored Division; Trucks: 20 Medium.
+
+A2021: 2nd Support Group (2 Arm); Trucks: 25 Medium, 5 Heavy.
+
+C4507: 3rd In Motor Bde; Trucks: 5 Light, 25 Medium.
+
+Msus (84004): Ist Coy French Motor Marines Trucks: 3 Medium.
 
 Any hex within the triangle formed by Tocra
-(B5501), Er Regima (A4830) and Benghazi: 24 Aus
-Bde (9 Aus; Less: 2/32 Bn); 20th Aus Bde (9 Aus
-Bde); 2/3 Aus AT Regt (9 Aus); 51st Field Arty
-Regt; Trucks: 5 Light, 35 Medium.
+
+(B5501), Er Regima (A4830) and Benghazi: 24 Aus Bde (9 Aus; Less: 2/32 Bn); 20th
+Aus Bde (9 Aus Bde); 2/3 Aus AT Regt (9 Aus); 51st Field Arty Regt; Trucks: 5
+Light, 35 Medium.
+
 Jalo (B0513): One unit of the LRDG
 
-Tobruk (C4807): HQ: 9 Aus Division; 26th Aus
-Bde (9 Aus); Ist RHA; 8th Field Arty Regt; 104th
-RHA; 65th AT Regt; 2nd Heavy AA Regt; 9th
-Heavy AA Regt; 15th Light AA Regt; 57th Light
-AA Regt Trucks: ‘5 light, 5 Medium.
+Tobruk (C4807): HQ: 9 Aus Division; 26th Aus Bde (9 Aus); Ist RHA; 8th Field
+Arty Regt; 104th RHA; 65th AT Regt; 2nd Heavy AA Regt; 9th Heavy AA Regt; 15th
+Light AA Regt; 57th Light AA Regt Trucks: ‘5 light, 5 Medium.
 
 Anywhere within one hex of:
 
-Alexandria: 7th Armored Division (see <<61_38>>);
-HQ: 70th Infantry Division; 22nd Gds Bde (I;
-ATT: Ist Buffs; 2nd Scots Gds; 3rd Coldstream
-Gds); 107th RHA; 149th AT Regt; 13th Light AA
-Regt; "Layforce"(I).
+Alexandria: 7th Armored Division (see <<61_38>>); HQ: 70th Infantry Division;
+22nd Gds Bde (I; ATT: Ist Buffs; 2nd Scots Gds; 3rd Coldstream Gds); 107th RHA;
+149th AT Regt; 13th Light AA Regt; "Layforce"(I).
 
 Mersa Matruh (D8714): 1st Royal Northumberland Fusiliers MG Bn; 7th Medium Arty
 Regt.
 
-Any hex in Cairo: Polish Bde; 11 Czech Bn; Ist
-Chesire MG Bn; Ist South Staffordshires (I); 2nd
-Kings Own Royal Regt. (I); 8th Medium Field Arty; 64th Medium Field Arty; 106th AT Regt; 74th
-Heavy AA Regt, 52nd Light AA Regt; Ist Essex
-(23/70)
+Any hex in Cairo: Polish Bde; 11 Czech Bn; Ist Chesire MG Bn; Ist South
+Staffordshires (I); 2nd Kings Own Royal Regt. (I); 8th Medium Field Arty; 64th
+Medium Field Arty; 106th AT Regt; 74th Heavy AA Regt, 52nd Light AA Regt; Ist
+Essex (23/70)
 
-Note: Several units in Egypt at this time have not
-been listed as they did not see action and were
-eventually shipped to Crete or Syria; e.g. 7th RTR,
-1st Hampshires, Ist Welch; 1st Durham Light, infantry and the entire 16th Bde of the 70th Infantry
-division, among others.
+[note]
+Several units in Egypt at this time have not been listed as they did not
+see action and were eventually shipped to Crete or Syria; e.g. 7th RTR, 1st
+Hampshires, Ist Welch; 1st Durham Light, infantry and the entire 16th Bde of the
+70th Infantry division, among others.
 
 [#61_32]*[61.32]* Tank
 
@@ -92,7 +80,7 @@ Unit Tanks
 (Captured)
 
 Tanks of the 7th Armored Division are at maximum TOE, but all are broken down (see Case
-61.38).
+<<61_38>>).
 
 [#61_33]*[61.33]* Commonwealth North African Air Force
 
@@ -102,411 +90,338 @@ available with all planes refitted:
 
 6RTR/3rd Amr X
 
-Plane
-Location Type Available
-Benina (A 4829) Hurricane I 15
-Agedabia (A 2629) Lysanders 3
-Maraua (B 5410) —_ Blenheim IV 15
-Barce (B 5504) Lysanders 9
-Tobruk (C 4907) — Hurricane I 16
+[%header]
+|===
+| Plane Location | Type | Available
+| Benina (A 4829) | Hurricane I | 15
+| Agedabia (A 2629) | Lysanders | 3
+| Maraua (B 5410)  | Blenheim IV | 15
+| Barce (B 5504) | Lysanders | 9
+| Tobruk (C 4907) | Hurricane I | 16
+|===
 
 Pilots:'1 TWO pilot and 4 ONE Pilots.
+
 Air Facilities:
 
-Flying Boat Basins @ Alexandria (E 3614) and
-Port Said (off-map, E 4033).
+Flying Boat Basins @ Alexandria (E 3614) and Port Said (off-map, E 4033).
 
 Flying Boat Alighting Areas = none.
 
-Airfields @ Benina (A 4829), Barce (B 5504), Derna (B 5925), Martuba (B 5526), El Adem (C 4507),
-Mersa Matruh (D 3714), Amiriya (E 3212),
-Dekheila (E 3512), Alexandria (E 3613 & 3714),
-Abbassia (E 2132), Aboukir (E 3815), Almaza (E
-2133) plus the four off-map fields to the east (i.e.,
-all except Ethiopia in the south).
+Airfields at Benina (A 4829), Barce (B 5504), Derna (B 5925), Martuba (B 5526),
+El Adem (C 4507), Mersa Matruh (D 3714), Amiriya (E 3212), Dekheila (E 3512),
+Alexandria (E 3613 & 3714), Abbassia (E 2132), Aboukir (E 3815), Almaza (E 2133)
+plus the four off-map fields to the east (i.e., all except Ethiopia in the
+south).
 
-Landing Strips @ Agadabia (A 2629), Antelat (A
-3233), Msus (B 4004), El Abiar (B 4901), Maraua
+Landing Strips @ Agadabia (A 2629), Antelat (A 3233), Msus (B 4004), El Abiar (B
+4901), Maraua (B 5410), Gazala (B 4933), Tobruk (C 4807), Gambut (C 4414), Sidi
+Barrani (C 4131), Gerawla (D 3516), Sidi Haneish (D 3418), Maaten Baggush (D
+3520), and Fuka (D 3323). In addition the Commonwealth Player may place three
+Landing Strips anywhere on the game map.
 
-(B 5410), Gazala (B 4933), Tobruk (C 4807), Gambut (C 4414), Sidi Barrani (C 4131), Gerawla (D
-3516), Sidi Haneish (D 3418), Maaten Baggush (D
-3520), and Fuka (D 3323). In addition the Commonwealth Player may place three Landing Strips
-anywhere on the game map.
-
-[#61_34]*[61.34]* Malta: The Commonwealth Player has an
-initial total air facility capacity of 8 which he may
-divide amongst the facilities. He has 26AA Points
-which he may divide amongst the facilities:
+[#61_34]*[61.34]* Malta: The Commonwealth Player has an initial total air
+facility capacity of 8 which he may divide amongst the facilities. He has 26AA
+Points which he may divide amongst the facilities:
 
 Pilots: 2 TWO's and 4 One pilots.
 
-Planes {all are refitted): 24 Hurricane I, 12 Wellington I, 10 Swordfish, 5 Sunderlands, 4
+Planes (all are refitted): 24 Hurricane I, 12 Wellington I, 10 Swordfish, 5 Sunderlands, 4
 Marylands.
 
-He may not begin construction/repair of air
-facilities until the second game-turn of this
-
-scenario.
-9
+He may not begin construction/repair of air facilities until the second
+game-turn of this scenario.  9
 
 [#61_35]*[61.35]* COMMONWEALTH TRUCKS
 
-The Commonwealth Player receives the following
-Second-Third Line Trucks for distribution to any
-location on game-maps A through D. (Not E).
-This includes trucks for Dumps and Air Facilities.
+The Commonwealth Player receives the following Second-Third Line Trucks for
+distribution to any location on game-maps A through D. (Not E).  This includes
+trucks for Dumps and Air Facilities.
 
-Type Number
-Light 45
-Medium 100
-Heavy 25
+|===
+|Type | Number
 
-The Commonwealth Player places the following
-Trucks in Alexandria or Cairo:
+|Light | 45
+|Medium | 100
+|Heavy | 25
+|===
 
-Type Number
-Light 25
-Medium 175
-Heavy 35
+The Commonwealth Player places the following Trucks in Alexandria or Cairo:
+
+|===
+| Type | Number
+| Light | 25
+| Medium | 175
+| Heavy | 35
+|===
 
 [#61_36]*[61.36]* Supply
 
-The Commonwealth Player receives nine Dumps
-and three Dummy Dumps. In addition, both
-Benghazi and Tobruk are supply dumps.
+The Commonwealth Player receives nine Dumps and three Dummy Dumps. In addition,
+both Benghazi and Tobruk are supply dumps.
 
-The Dumps may be placed at any of the following
-locations: Msus (B 4004), Tecnis (B 5407), Martuba (B 5526), Mechili (B 4921), Timimi (B 5229),
-El Magrun (A 3729), Barce (B 5504), Mersa Brega'
-(A 2021), Derna (B 5925), Agadabia (A 2629),
-Tocra (B 5501) and Sceledima (A3933). All Dumps
-must be placed. (Historically, the first nine were
-actual dumps, with Msus and Tecnis being the major dumping areas.)
+The Dumps may be placed at any of the following locations: Msus (B 4004), Tecnis
+(B 5407), Martuba (B 5526), Mechili (B 4921), Timimi (B 5229), El Magrun (A
+3729), Barce (B 5504), Mersa Brega' (A 2021), Derna (B 5925), Agadabia (A 2629),
+Tocra (B 5501) and Sceledima (A3933). All Dumps must be placed. (Historically,
+the first nine were actual dumps, with Msus and Tecnis being the major dumping
+areas.)
 
-Benghazi holds 100 Fuel Points, 50 Ammunition
-Points, and 150 Stores. Benghazi also has 10
-Points of Italian Prisoners, a POW Camp, and
-one Commonwealth Guard.
+Benghazi holds 100 Fuel Points, 50 Ammunition Points, and 150 Stores. Benghazi
+also has 10 Points of Italian Prisoners, a POW Camp, and one Commonwealth Guard.
 
-Tobruk has 500 points of Fuel, 1500 Ammunition
-Points, and 1000 Stores.
+Tobruk has 500 points of Fuel, 1500 Ammunition Points, and 1000 Stores.
 
-The Commonwealth Player has for distribution to
-his Dumps the following: 2550 Fuel Points, 1700
-Ammunition Points and 1600 Stores. These may
-be distributed as the Commonwealth Player sees
-fit, with one limitation: no more than 25% of the
-total of each item may be placed in a single dump.
-Furthermore, all actual dumps must have at least
-50 points of each item. All First Line Trucks not
-carrying men/equipment may be loaded with
-Fuel/Ammo/Stores and Water as the Players see
-fit. This is in addition to what is supplied above.
-Unlimited supplies in Cairo/Alexandria as per the
-rules.
+The Commonwealth Player has for distribution to his Dumps the following: 2550
+Fuel Points, 1700 Ammunition Points and 1600 Stores. These may be distributed as
+the Commonwealth Player sees fit, with one limitation: no more than 25% of the
+total of each item may be placed in a single dump.  Furthermore, all actual
+dumps must have at least 50 points of each item. All First Line Trucks not
+carrying men/equipment may be loaded with Fuel/Ammo/Stores and Water as the
+Players see fit. This is in addition to what is supplied above. Unlimited
+supplies in Cairo/Alexandria as per the rules.
 
-The Commonwealth Player has a Temporary
-Repair Facility in Tobruk and one in Mersa
-Matruh. Alexandria (either hex) and Cairo have
-Major Repair Facilities.
-
-29
-
-30
+The Commonwealth Player has a Temporary Repair Facility in Tobruk and one in
+Mersa Matruh. Alexandria (either hex) and Cairo have Major Repair Facilities.
 
 Air Supply
 
-The Commonwealth Player has 180 Fuel Points,
-250 Ammo Points, and 50 Stores for distribution
-amongst Air Facilities.
+The Commonwealth Player has 180 Fuel Points, 250 Ammo Points, and 50 Stores for
+distribution amongst Air Facilities.
 
 [#61_37]*[61.37]* COMMONWEALTH FLEET
 
-The Commonwealth Player receives all his fleet
-counters in Alexandria. They may not move out of
-Alexandria before the first OpStage of GameTurn 27. All are armed and undamaged.
+The Commonwealth Player receives all his fleet counters in Alexandria. They may
+not move out of Alexandria before the first OpStage of GameTurn 27. All are
+armed and undamaged.
 
-[#61_38]*[61.38]* REINFORCEMENTS/
-REPLACEMENTS
+[#61_38]*[61.38]* REINFORCEMENTS/ REPLACEMENTS
 
-Except as listed below, the Commonwealth Player
-takes his Reinforcements as they arrive, via The
-Reinforcement Track. Replacement Points arrive
-in the normal manner; the Commonwealth Player
-may not plan any such Replacements and must
-start any such planning in the normal course of
-events. There are no replacements allowed for
-March 1941.
+Except as listed below, the Commonwealth Player takes his Reinforcements as they
+arrive, via The Reinforcement Track. Replacement Points arrive in the normal
+manner; the Commonwealth Player may not plan any such Replacements and must
+start any such planning in the normal course of events. There are no
+replacements allowed for March 1941.
 
-There are several Commonwealth units being refitted, returned from assignments elsewhere, etc.
-These units had been either on the way to
-Greece/Syria, or in the shops. Plans had to be
-changed hastily, yet the scenario must adjust for
-the time in which that can be done. In essence, no
-units in Cairo or Alexandria may move during the
-third OpStage of Game-Turn 26, After that, only
-one battalion may be released per OpStage. (Thus
-it would take several stages to release the entire
-Polish Brigade; you would have to wait the required time to release all the battalions.)
-Remember, also, that battalions will be needed for
-Training purposes! In addition to the above, the
-18th Australian Brigade appears in Alexandria on
-the first OpStage of April, 1941. It may move (by
-rail, sea or land) on the succeeding OpStages of
-April, 1941 (in addition to any of the above units.
+There are several Commonwealth units being refitted, returned from assignments
+elsewhere, etc.  These units had been either on the way to Greece/Syria, or in
+the shops. Plans had to be changed hastily, yet the scenario must adjust for the
+time in which that can be done. In essence, no units in Cairo or Alexandria may
+move during the third OpStage of Game-Turn 26, After that, only one battalion
+may be released per OpStage. (Thus it would take several stages to release the
+entire Polish Brigade; you would have to wait the required time to release all
+the battalions.)  Remember, also, that battalions will be needed for Training
+purposes! In addition to the above, the 18th Australian Brigade appears in
+Alexandria on the first OpStage of April, 1941. It may move (by rail, sea or
+land) on the succeeding OpStages of April, 1941 (in addition to any of the above
+units.
 
-The 7th Armored Division presents a special case.
-It had been chewed up pretty badly in the previous
-six months' action; its tank battalions were a mess
-and its infantry and support units worn to the
-bone. The unit was in Alexandria for a complete
-refit. At the start of the scenario, all 7th Armored
-tanks are considered Brokendown. The 7th's Tank
-battalions may not be released until they are at
-least 75% repaired, and then they may be released
-only one per OpStage. In addition, one more nontank battalion may be released and sent westward
-per OpStage, all starting with the first OpStage in
-April. HQ units may be released at any time the
-player wishes. At the time of this scenario the 7th
-Armoured contained the following units: 4th Armrd Brigade (6 RTR reassigned, ARTR assigned);
-7th Armrd Brig; 7th Support Grp.
-
-For the purposes of the above Release Schedule,
-the 22nd Guards Brigade counts as one battalion.
+The 7th Armored Division presents a special case.  It had been chewed up pretty
+badly in the previous six months' action; its tank battalions were a mess and
+its infantry and support units worn to the bone. The unit was in Alexandria for
+a complete refit. At the start of the scenario, all 7th Armored tanks are
+considered Brokendown. The 7th's Tank battalions may not be released until they
+are at least 75% repaired, and then they may be released only one per OpStage.
+In addition, one more nontank battalion may be released and sent westward per
+OpStage, all starting with the first OpStage in April. HQ units may be released
+at any time the player wishes. At the time of this scenario the 7th Armoured
+contained the following units: 4th Armrd Brigade (6 RTR reassigned, ARTR
+assigned); 7th Armrd Brig; 7th Support Grp.  For the purposes of the above
+Release Schedule, the 22nd Guards Brigade counts as one battalion.
 
 [#61_4]
 === AXIS FORCES
+
 [#61_44]*[61.44]* Axis Land Forces
 
-All German land units that are scheduled to arrive
-before the third OpStage of Game-Turn 26 (See
-Reinforcements Schedule) may be placed within
-one hex of El Agheila (A1816) but not east of that
-village. The Axis Player may place them in any
-formations he wishes (using Battle Groups, if he so
-desires). The Italian Player has six Divisions on the
-game-map: the Ariete Division may be placed
-within two hexes of El Agheila, but not east of that
-village. The Pavia, Bologna, Brescia and Savonna
-divisions may be placed anywhere between Ras el
-Ali (A 2010) and Nofilia (A2703) with no divison
-less than two hexes from another. The Trento
-Division is in Tripoli. Also in Tripoli are the XXI
-Corps Artillery, the 350th GaF Artillery Regiment, the 2nd Artillery Ragruppament, and the
-Sabratha Division. The Sabratha Division has lost
-its 6 infantry battalions (although the 85th and
+All German land units that are scheduled to arrive before the third OpStage of
+Game-Turn 26 (See Reinforcements Schedule) may be placed within one hex of El
+Agheila (A1816) but not east of that village. The Axis Player may place them in
+any formations he wishes (using Battle Groups, if he so desires). The Italian
+Player has six Divisions on the game-map: the Ariete Division may be placed
+within two hexes of El Agheila, but not east of that village. The Pavia,
+Bologna, Brescia and Savonna divisions may be placed anywhere between Ras el Ali
+(A 2010) and Nofilia (A2703) with no divison less than two hexes from another.
+The Trento Division is in Tripoli. Also in Tripoli are the XXI Corps Artillery,
+the 350th GaF Artillery Regiment, the 2nd Artillery Ragruppament, and the
+Sabratha Division. The Sabratha Division has lost its 6 infantry battalions
+(although the 85th and 86th Regimental Headquarters still exist). Its MG Bn, and
+Arty Regiment have been reduced to 1 TOE Strength Point each. NOTE that the six
+infantry battalions and two "support" units may be rebuilt by Replacements.
 
-86th Regimental Headquarters still exist). Its MG
-Bn, and Arty Regiment have been reduced to 1
-TOE Strength Point each. NOTE that the six infantry battalions and two "support" units may be
-rebuilt by Replacements.
+All units (except the Sabratha) are as listed on the OA Sheets (including
+Tanks).
 
-All units (except the Sabratha) are as listed on the
-OA Sheets (including Tanks).
-
-One Oasis Company (German) is at Maaten
-Groter (A 1318) and one at Magadah (A 0817).
+One Oasis Company (German) is at Maaten Groter (A 1318) and one at Magadah (A
+0817).
 
 [#61_42]*[61.42]* Axis Airforce
 
-Planes: The Axis Player receives all of the German
-planes listed in the Axis Airplane Reinforcement
-Chart as shceduled to arrive prior to the 3rd
-OpStage of Game-Turn 26. All of these planes are
-considered refitted. The Axis Player receives the
-following Italian planes:
+Planes: The Axis Player receives all of the German planes listed in the Axis
+Airplane Reinforcement Chart as shceduled to arrive prior to the 3rd OpStage of
+Game-Turn 26. All of these planes are considered refitted. The Axis Player
+receives the following Italian planes:
 
-Total
-Type Available Refitted
-C.R. 42's 61 27
-G. 50's 62 33
-B.R. 20's 1 0
-SM 79 30 14
-Z 1007bis 1 1
 
-Pilots: Italian = 3 THREE, 11 TWO's and 12 ONE
-pilots. German=The Axis Player rolls once to
-determine the number of ONE thru FOUR rated
-pilots he receives (i.e., the March, 1941 die roll).
+[%header]
+|===
+| Type | Available | Refitted
+| C.R. 42's | 61 | 27
+| G. 50's | 62 | 33
+| B.R. 20's | 1 | 0
+| SM 79 | 30 | 14
+| Z 1007bis | 1 | 1
+|===
 
-SGSU's: 13 Italian. German SGSU's are available
-as per the Air Game rules (because of Air
-Facilities, below).
+Pilots: Italian = 3 THREE, 11 TWO's and 12 ONE pilots. German=The Axis Player
+rolls once to determine the number of ONE thru FOUR rated pilots he receives
+(i.e., the March, 1941 die roll).
 
-Air Facilities: The Axis Player may base any portion of his airforce at Italy/Sicily within the
-minimum German plane restrictions of Case <<43_1>>
-(Crete is still British). The Axis Player may place
-one airfield and one air landing strip in any hex
-west of El Agheila (A 1816).
+SGSU's: 13 Italian. German SGSU's are available as per the Air Game rules
+(because of Air Facilities, below).
 
-16
+Air Facilities: The Axis Player may base any portion of his airforce at
+Italy/Sicily within the minimum German plane restrictions of Case <<43_1>>
+(Crete is still British). The Axis Player may place one airfield and one air
+landing strip in any hex west of El Agheila (A 1816).
 
 [#61_43]*[61.43]* Axis Tracks
 
-AJl German first line Trucks (which are indicated
-on the Reinforcement Schedule as being attached
-to arrived German units) may be distributed
-among those units freely.
+AJl German first line Trucks (which are indicated on the Reinforcement Schedule
+as being attached to arrived German units) may be distributed among those units
+freely.
 
-The Italian Player receives the following FirstLine Trucks, which may be assigned as he sees fit
-to his units:
+The Italian Player receives the following FirstLine Trucks, which may be
+assigned as he sees fit to his units:
 
-Type Number
-Light 45
-Medium 220
-Heavy 50
+[%header]
+|===
+| Type | Number
+| Light | 45
+| Medium | 220
+| Heavy | 50
+|===
 
-The following Second/Third Line Trucks are
-available (for any and all purposes):
+The following Second/Third Line Trucks are available (for any and all purposes):
 
-Type Number
-Light 95
-Medium 280
-Heavy 50
+[%header]
+|===
+| Type | Number
+| Light | 95
+| Medium | 280
+| Heavy | 50
+|===
 
-It is firmly suggested that the Axis Player use these
-as Second/Third Line Trucks, otherwise he will
-have a hard time moving his Supply around.
+It is firmly suggested that the Axis Player use these as Second/Third Line
+Trucks, otherwise he will have a hard time moving his Supply around.
 
-Additional second/third line trucks: 10 Medium
-Trucks at air facilities.
+Additional second/third line trucks: 10 Medium Trucks at air facilities.
 
 [#61_44]*[61.44]* Supply
 
-The Axis Player receives five Dumps, two of which
-are Dummies. These dumps may be placed at any
-hex between El Agheila and Nofilia.
+The Axis Player receives five Dumps, two of which are Dummies. These dumps may
+be placed at any hex between El Agheila and Nofilia.
 
-For division between the three active dumps the
-Axis Player has 9600 Fuel Points, 2500 Ammo
-Points, 950 Stores, and 1100 Water Points. No
-more than 50% of each may be located at any one
-dump.
+For division between the three active dumps the Axis Player has 9600 Fuel
+Points, 2500 Ammo Points, 950 Stores, and 1100 Water Points. No more than 50% of
+each may be located at any one dump.
 
-In addition, Tripoli holds 3000 Fuel Points, 1500
-Ammunition Points, and 500 Stores.
+In addition, Tripoli holds 3000 Fuel Points, 1500 Ammunition Points, and 500
+Stores.
 
-For distribution to Air Facilities (remember,
-Tripoli/Tunisia air facilities have unlimited Fuel
-and Ammo) there are 50 Fuel Points and 50 Ammo
-Points. The Axis player does not receive a Convoy
-during the first game-turn. He must plan his convoys for the second and third game-turns.
+For distribution to Air Facilities (remember, Tripoli/Tunisia air facilities
+have unlimited Fuel and Ammo) there are 50 Fuel Points and 50 Ammo Points. The
+Axis player does not receive a Convoy during the first game-turn. He must plan
+his convoys for the second and third game-turns.
 
-[#61_45]*[61.45]* All Axis Reinforcements are taken normally, as they appear on the track.
+[#61_45]*[61.45]* All Axis Reinforcements are taken normally, as they appear on
+the track.
 
 [#61_5]
 === INITIATIVE
 
-The Axis Player has the Initiative through the end
-of Game-turn 27. Players roll for Initiative starting with Game-Turn 28.
+The Axis Player has the Initiative through the end of Game-turn 27. Players roll
+for Initiative starting with Game-Turn 28.
 
 [#61_6]
-=== CONSTRUCTION ON THE MAP
-AT THE START OF SCENARIO
+=== CONSTRUCTION ON THE MAP AT THE START OF SCENARIO
 
-The railroad runs to Mersa Matruh (D3714) and
-ends there. There are no minefields or pipeline
-(other than provided by the RR). All ports are of
-full (listed) Efficiency Level except Benghazi (at
-zero) and Tobruk (at seven—and San Giorgio is
-still there). The Commonwealth Player may place
-a total of four Level 1 Fortifications within two
-hexes of Tobruk. The unfinished roads connecting
-Solium (C4021) and Sidi Barrini (C4131) and the
-entire network around Tobruk have been built.
+The railroad runs to Mersa Matruh (D3714) and ends there. There are no
+minefields or pipeline (other than provided by the RR). All ports are of full
+(listed) Efficiency Level except Benghazi (at zero) and Tobruk (at seven—and San
+Giorgio is still there). The Commonwealth Player may place a total of four Level
+1 Fortifications within two hexes of Tobruk. The unfinished roads connecting
+Solium (C4021) and Sidi Barrini (C4131) and the entire network around Tobruk
+have been built.
 
 [#61_7]
-=== AIR & LOGISTICS GAMES
-ABSTRACTIONS
+=== AIR & LOGISTICS GAMES ABSTRACTIONS
 
-This Case covers the adjustments needed in addition to those given in Case <<59_6>> in order to play this
-scenario without the Air and/or Logistics
+This Case covers the adjustments needed in addition to those given in Case
+<<59_6>> in order to play this scenario without the Air and/or Logistics
 Game(s).
 
-[#61_71]*[61.71]* Air Abstracted (Land & Logistics Games):
-The 2nd-3rd Line Trucks available to the Players
-are modified as follows:
+[#61_71]*[61.71]* Air Abstracted (Land & Logistics Games): The 2nd-3rd Line
+Trucks available to the Players are modified as follows:
 
-A. Axis Player: 2nd-3rd Line are now a total of 90
-Light; 270 Medium and 40 Heavy.
+A. Axis Player: 2nd-3rd Line are now a total of 90 Light; 270 Medium and 40
+Heavy.
 
-B. Commonwealth Player: 2nd/3rd Line Trucks
-in Alexandria/Cairo are now a total of 25 Light,
-150 Medium and 25 Heavy. Other 2nd/3rd Line
-Trucks are now a total of 40 Light, 90 Medium and
-20 Heavy.
+B. Commonwealth Player: 2nd/3rd Line Trucks in Alexandria/Cairo are now a total
+of 25 Light, 150 Medium and 25 Heavy. Other 2nd/3rd Line Trucks are now a total
+of 40 Light, 90 Medium and 20 Heavy.
 
-[#61_72]*[61.72]* Air & Logistics Abstracted
-(Land Game Only):
+[#61_72]*[61.72]* Air & Logistics Abstracted (Land Game Only):
 
-A. The Players' ability to bring in motorization
-points is equal to their respective abilities to bring
-in Medium Truck Points (i.e., each Medium Truck
+A. The Players' ability to bring in motorization points is equal to their
+respective abilities to bring in Medium Truck Points (i.e., each Medium Truck
 Point equal one Motorization Point).
 
-B. Initial unattached motorization points: The
-Axis Player has 290; the Commonwealth Player
-has 150 in Alexandria/Cairo and 90 at other locations.
+B. Initial unattached motorization points: The Axis Player has 290; the
+Commonwealth Player has 150 in Alexandria/Cairo and 90 at other locations.
 
-C. Axis Initial Supply Status: Case <<61_43>> is replaced by the following: The Axis receives 10 regular
-supply units, each with 40 Ammo and 60 Fuel
-Points and 3 Dummy supply units which may be
-distributed freely (within stacking restrictions) in
-any of the road hexes between El Agheila (A 1816)
-and Nofilia (A 2703) inclusive. This does not include the road from E 1716 the Maatan Groter (A
-1318). In addition, the Axis Player receives 8
-regular supply units, each with 40 Ammo and 25
-Fuel Points, in the Tripoli box.
+C. Axis Initial Supply Status: Case <<61_43>> is replaced by the following: The
+Axis receives 10 regular supply units, each with 40 Ammo and 60 Fuel Points and
+3 Dummy supply units which may be distributed freely (within stacking
+restrictions) in any of the road hexes between El Agheila (A 1816) and Nofilia
+(A 2703) inclusive. This does not include the road from E 1716 the Maatan Groter
+(A 1318). In addition, the Axis Player receives 8 regular supply units, each
+with 40 Ammo and 25 Fuel Points, in the Tripoli box.
 
-D. Commonwealth Initial Supply Status: Case
-61.35 is replaced by the following:
+D. Commonwealth Initial Supply Status: Case 61.35 is replaced by the following:
 
-The Commonwealth Player receives one regular
-supply unit with 20 Ammo and 30 Fuel Points in
-Benghazi (A 4827) and 5 regular supply units, each
-with 40 Ammo and 15 Fuel Points, in Tobruk (C
-4807). In addition, he receives 9 regular supply
+The Commonwealth Player receives one regular supply unit with 20 Ammo and 30
+Fuel Points in Benghazi (A 4827) and 5 regular supply units, each with 40 Ammo
+and 15 Fuel Points, in Tobruk (C 4807). In addition, he receives 9 regular
+supply units, each with 40 Ammo and 25 Fuel Points, and 4 Dummy supply units to
+be divided among the following locations with the restriction that no more than
+2 regular supply units may be placed at any location: Mersa Brega (A 2021),
+Agadabia (A 2629), Sceledima (A 3933), El Magrun (A 3729), Msus (B 4004), Tecnis
+(B 5407), Barce (B 5504), Tocra (B 5501), Martuba (B 5526), Mechili (B 4921),
+Timimi (B 5229) and Derna (B 5925)
 
-units, each with 40 Ammo and 25 Fuel Points, and
-4 Dummy supply units to be divided among the
-following locations with the restriction that no
-more than 2 regular supply units may be placed at
-any location: Mersa Brega (A 2021), Agadabia (A
-2629), Sceledima (A 3933), El Magrun (A 3729),
-Msus (B 4004), Tecnis (B 5407), Barce (B 5504),
-Tocra (B 5501), Martuba (B 5526), Mechili (B
-4921), Timimi (B 5229) and Derna (B 5925)
-
-In addition, Cairo and Alexandria each contain
-two regular supply units: each supply unit contains
-40 Ammo and 60 Fuel Points.
+In addition, Cairo and Alexandria each contain two regular supply units: each
+supply unit contains 40 Ammo and 60 Fuel Points.
 
 [#61_73]*[61.73]* Logistics Abstracted (Land & Air Games):
-A. The Players' ability to bring in motorization
-points is equal to their respective abilities to bring
-in Medium plus Heavy Truck Points (i.e., éach
-Medium and each Heavy Truck Point is equal to
-one Motorization Point).
 
-B. Axis Initial Supply Status: As in <<61_62>> “C”
-above and in addition 1 regular supply unit with 20
-Ammo and 30 Fuel Points may be placed at any
-one Axis air facility.
-
-C. Commonwealth Initial Supply Status: As in
-61.72 “‘D”' above plus 1 regular supply unit with
-40 Ammo and 60 Fuel Points which may be placed
-at any one Commonwealth air facility.
+A. The Players' ability to bring in motorization points is equal to their
+respective abilities to bring in Medium plus Heavy Truck Points (i.e., éach
+Medium and each Heavy Truck Point is equal to one Motorization Point).
+B. Axis Initial Supply Status: As in <<61_62>> "C" above and in addition 1
+regular supply unit with 20 Ammo and 30 Fuel Points may be placed at any one
+Axis air facility.
+C. Commonwealth Initial Supply Status: As in <<61_72>> "D" above plus 1 regular
+supply unit with 40 Ammo and 60 Fuel Points which may be placed at any one
+Commonwealth air facility.
 
 [#61_8]
 === VICTORY CONDITIONS
 
-Victory Conditions for The Race for Tobruk
-Scenario are fairly simple. The Player who holds
-Tobruk at the end of the scenario wins. If the Axis
-Player also holds Bardia (C 4321) he wins a
-Decisive Victory. If he holds Benghazi-TobrukBardia plus any two villages/cities in Egypt he
-wins a Strategic Victory. If he holds anything less
-than the above, it is a Commonwealth Victory.
-Furthermore, if the Commonwealth holds all the
-above (including Benghazi) it is a Smashing Victory.
+Victory Conditions for The Race for Tobruk Scenario are fairly simple. The
+Player who holds Tobruk at the end of the scenario wins. If the Axis Player also
+holds Bardia (C 4321) he wins a Decisive Victory. If he holds
+Benghazi-TobrukBardia plus any two villages/cities in Egypt he wins a Strategic
+Victory. If he holds anything less than the above, it is a Commonwealth Victory.
+Furthermore, if the Commonwealth holds all the above (including Benghazi) it is
+a Smashing Victory.
