--- a/section-62.adoc
+++ b/section-62.adoc
@@ -1,156 +1,120 @@
 [#62_0]
-== SCENARIO GROUP
-THIREE: OPERATION
-CRUSADER
+== SCENARIO GROUP THIREE: OPERATION CRUSADER
 
-{62.1] GENERAL DESCRIPTION
+[#62_1]
+=== GENERAL DESCRIPTION
 
-Operation Crusader covers the events of the
-Winter of 1941-2, in which the Commonwealth
-forces attempted to relieve Tobruk (under siege by
-the Axis) while, at the same time, Rommel had
-planned to strike eastward at the Allied forces in
-Egypt. The result was an extended series of battles
-in the area between Sollum and Tobruk.
+Operation Crusader covers the events of the Winter of 1941-2, in which the
+Commonwealth forces attempted to relieve Tobruk (under siege by the Axis) while,
+at the same time, Rommel had planned to strike eastward at the Allied forces in
+Egypt. The result was an extended series of battles in the area between Sollum
+and Tobruk.
 
 [#62_2]
-=== SCENARIO LENGTH AND
-DURATION
+=== SCENARIO LENGTH AND DURATION
 
-The scenario starts with the 3rd-OpStage of the
-57th Game-Turn. The scenario ends with the conclusion of the 1st OpStage of the 65th Game-Turn.
-The estimated playing time for this scenario is between 200 and 250 hours.
+The scenario starts with the 3rd-OpStage of the 57th Game-Turn. The scenario
+ends with the conclusion of the 1st OpStage of the 65th Game-Turn.  The
+estimated playing time for this scenario is between 200 and 250 hours.
 
 [#62_3]
 === COMMONWEALTH FORCES
 
-[#62_31]*[62.31]* Commonwealth Forces Initial
-Deployment (Hex: Units)
+[#62_31]*[62.31]* Commonwealth Forces Initial Deployment (Hex: Units)
 
 Within 1 hex of
 
-C4807; 32 Army Tank Bde (2; Assg: Ist RTR
-[7/7]; 4th RTR and 7th RTR); Polish Bde; 70th Infantry Division (Less: 1 Argyll & Sutherland;
-Assg: 2nd Kings Own Rifles [in place of the 1
-A&S], Ist Royal Northumberland Fusiliers MG
-Bn, Ist RHA; 104th RHA, 107th RHA; ATT:
-144th Field Arty, 2/13 Aus Inf Bn [20/9 J); 12/15
-Aus In Bn [TOE strength of 4; 0/9]; 13th Light
-AA; 14 Light AA; 2nd Light AA and 89th Heavy
+C4807: 32 Army Tank Bde (2; Assg: Ist RTR [7/7]; 4th RTR and 7th RTR); Polish
+Bde; 70th Infantry Division (Less: 1 Argyll & Sutherland; Assg: 2nd Kings Own
+Rifles [in place of the 1 A&S], Ist Royal Northumberland Fusiliers MG Bn, Ist
+RHA; 104th RHA, 107th RHA; ATT: 144th Field Arty, 2/13 Aus Inf Bn [20/9 J);
+12/15 Aus In Bn [TOE strength of 4; 0/9]; 13th Light AA; 14 Light AA; 2nd Light
+AA and 89th Heavy
 AA. Trucks: 20 Light, 135 Medium, 53 Heavy.
 
-C4iil: 7th Armored Bde 7; Assg: 7th Hus /4/7/,
-6th RTR /4/7], 2nd RTR; Less its own 1 RTR and
-8 Hus; Att: 4th RHA /7Spt/7f Trucks: 30
-Medium, 15 Heavy.
+C4111: 7th Armored Bde 7; Assg: 7th Hus /4/7/, 6th RTR /4/7], 2nd RTR; Less its
+own 1 RTR and 8 Hus; Att: 4th RHA /7Spt/7f Trucks: 30 Medium, 15 Heavy.
 
-C4i3i: Kings Dragoon Gds (R; 2Spt/2); 67th
-Medium Arty; 16th Light AA; Trucks: 6 Light, 10
-Medium, 3 Heavy.
+C4131: Kings Dragoon Gds (R; 2Spt/2); 67th Medium Arty; 16th Light AA; Trucks: 6
+Light, 10 Medium, 3 Heavy.
 
-C 3814: 4th South African Armored Car Bn
-Trucks: 2 Light, 3 Medium, 1 Heavy. 4th Armored
-Brigade (7; Independent Bde: no longer considered assignedassigned to the 7th Armored Div;
-Less: its 6 RTR and 7 Hus; Assg: 8th Hus /7/7/;
-3rd RTR /1/2); 5th RTR /3/2/; Att: 102nd AT
-Regt; 2nd RHA /2Spt/2)); Trucks: 45 Medium, 15
+C3814: 4th South African Armored Car Bn Trucks: 2 Light, 3 Medium, 1 Heavy. 4th
+Armored Brigade (7; Independent Bde: no longer considered assignedassigned to
+the 7th Armored Div; Less: its 6 RTR and 7 Hus; Assg: 8th Hus /7/7/; 3rd RTR
+/1/2); 5th RTR /3/2/; Att: 102nd AT Regt; 2nd RHA /2Spt/2)); Trucks: 45 Medium,
+15 Heavy.
+
+C3823: 11 In Bde (4 In; Less: 4/7 Rajp; Assg: 2/5 Mahratta Light Inf [in it
+place]); Trucks: 5 Light, 20 Medium, 5 Heavy.
+
+C3721: Central India Horse Regt (R; TOE Strength of 3; 4 Jn) Trucks: 3 Light, 3
+Medium.¢3944: ist South
+
+African Divison (Det: the three Inf Bdes and 4th SA Field Arty); Trucks: 5
+Light, 22 Medium, 6 Heavy.
+
+C3614: 7th Support Group (7; Det: 11 Hus [R] and 4th RHA; Assg: Ist Light AA and
+60th Field Arty) Trucks: 30 Medium, 15 Heavy.
+
+C3621: 4th In Division (Det: All three Inf Bdes and the Recce Regt); 8th Field
+Arty; 65th AT Regt; 57th Light AA; Trucks: 5 Light, 20 Medium, 8 Heavy
+
+C3532: 2nd South Africa Div (Det: 7 SA Armored Car, 2nd SA Field Arty and 2nd SA
+AT Regt); Trucks: 12 Light, 70 Medium, 14 Heavy.
+
+C3521: lst Army Tank Bde Trucks: 30 Medium, 17 Heavy.
+
+C3530: 73rd AT Regt; 7th Medium Arty; 64th Medium Arty; 68th Medium Arty;
+Trucks: 3 Light, 25 Medium, 5 Heavy.
+
+C3419: 7th In Bde (4 In); Trucks: 5 Light, 22 Medium, 5 Heavy.
+
+C3426: Sth In Bde (4 In; Less: 1 Royal Fusilier; Assg: 1 Buffs fin its place/);
+2nd South Africa AT Regt (2 SA); Trucks: 5 Light, 20 Medium, 5 Heavy.
+
+C3410: 11th Hus (7Spt/7); Trucks: 10 Medium, 3 Heavy.
+
+C3414: HQ: 7th Armored Division Trucks: 2 Light, 2 Medium
+
+C3318: 2nd New Zealand Div Trucks: 15 Light, 75 Medium, 21 Heavy.
+
+C3212: 22 Armored Bde (now Assg to the 7th Armored Div) Trucks: 15 Medium, 10
 Heavy.
 
-C3823: 11 In Bde (4 In; Less: 4/7 Rajp; Assg: 2/5
-Mahratta Light Inf [in it place]); Trucks: 5 Light,
-20 Medium, 5 Heavy.
+C3111: 1st South African Bde (ISA) Trucks: 5 Light, 20 Medium, 3 Heavy.
 
-C3721: Central India Horse Regt (R; TOE
-Strength of 3; 4 Jn)
-Trucks: 3 Light, 3 Medium.¢3944: ist South
-
-African Divison (Det: the three Inf Bdes and 4th
-SA Field Arty); Trucks: 5 Light, 22 Medium, 6
-Heavy.
-
-C3614: 7th Support Group (7; Det: 11 Hus [R] and
-4th RHA; Assg: Ist Light AA and 60th Field Arty)
-Trucks: 30 Medium, 15 Heavy.
-
-C3621: 4th In Division (Det: All three Inf Bdes and
-the Recce Regt); 8th Field Arty; 65th AT Regt;
-57th Light AA; Trucks: 5 Light, 20 Medium, 8
-Heavy
-
-C3532: 2nd South Africa Div (Det: 7 SA Armored
-Car, 2nd SA Field Arty and 2nd SA AT Regt);
-Trucks: 12 Light, 70 Medium, 14 Heavy.
-
-C3521: lst Army Tank Bde
-Trucks: 30 Medium, 17 Heavy.
-
-C3530: 73rd AT Regt; 7th Medium Arty; 64th
-Medium Arty; 68th Medium Arty; Trucks: 3
-Light, 25 Medium, 5 Heavy.
-
-C3419: 7th In Bde (4 In); Trucks: 5 Light, 22
-Medium, 5 Heavy.
-
-C3426: Sth In Bde (4 In; Less: 1 Royal Fusilier;
-Assg: 1 Buffs fin its place/); 2nd South Africa AT
-Regt (2 SA); Trucks: 5 Light, 20 Medium, 5
-Heavy.
-
-C3410: 11th Hus (7Spt/7); Trucks: 10 Medium, 3
-Heavy.
-
-C3414: HQ: 7th Armored Division
-Trucks: 2 Light, 2 Medium
-
-C3318: 2nd New Zealand Div
-Trucks: 15 Light, 75 Medium, 21 Heavy.
-
-C 3212: 22 Armored Bde (now Assg to the 7th Armored Div)
-Trucks: 15 Medium, 10 Heavy.
-
-C3111: 1st South African Bde (ISA)
-Trucks: 5 Light, 20 Medium, 3 Heavy.
-
-C 3015: 22 Gds Bde (1; Assg: 1st Tower Hamlet
-Rifles Spt/2, 3rd Coldstream Gds; Att: 51st Field
-Arty)
+C3015: 22 Gds Bde (1; Assg: 1st Tower Hamlet Rifles Spt/2, 3rd Coldstream Gds;
+Att: 51st Field Arty)
 
 Trucks: 20 Medium, 10 Heavy.
 
-C2712: 5th South Africa Bde (1SA)
-Trucks: 5 Light, 20 Medium, 3 Heavy.
+C2712: 5th South Africa Bde (1SA) Trucks: 5 Light, 20 Medium, 3 Heavy.
 
-C 1014: 6th South African Armored Car Bn; 7th
-SA Recce Bn (2 SA); 29th In Bde (5 In; Less: 6/13
-FFR; Assg: Ist Royal Fusiliers 5/4 In; in its place#;
-Att: 2 South African Field Arty Regt 2 SA)
-Trucks: 7 Light, 25 Medium, 6 Heavy.
+C1014: 6th South African Armored Car Bn; 7th SA Recce Bn (2 SA); 29th In Bde (5
+In; Less: 6/13 FFR; Assg: Ist Royal Fusiliers 5/4 In; in its place#; Att: 2
+South African Field Arty Regt 2 SA) Trucks: 7 Light, 25 Medium, 6 Heavy.
 
-D 3714: 2nd South African Bde (J SA); 4th SA
-Field Arty (7 SA)
+D3714: 2nd South African Bde (J SA); 4th SA Field Arty (7 SA)
 
 Trucks: 5 Light, 22 Medium, 6 Heavy.
 
-12001: 1st South African Road Construction Bn.
-Trucks: 3 Light .
+12001: 1st South African Road Construction Bn.  Trucks: 3 Light .
 
 [#62_32]*[62.32]* Tanks
 
-The units listed below have the following TOE of
-tanks (Unit: Tanks).
+The units listed below have the following TOE of tanks (Unit: Tanks).
 
-iRTR G2nd Army, Bde 12): 4 Mk VI Light
+1RTR G2nd Army, Bde 12): 4 Mk VI Light
+
 4RTR Glnd Army, Bde 12): 10 Matildas
 
-7 RTR Gland Army, Bde 12): 4 Matildas
+7RTR Gland Army, Bde 12): 4 Matildas
 
-8 RTR (ist Army, Tank Bde): 10 Valentines
+8RTR (ist Army, Tank Bde): 10 Valentines
 
-42nd RTR (ist Army, Tank Bde): 3 Matilidas (the
-following OpStage, the first of game-turn 58, the
-unit receives 7 more TOE of Matildas if it does not
-move. If it does, it receives them the second
-OpStage of game-turn 58.)
+42nd RTR (ist Army, Tank Bde): 3 Matilidas (the following OpStage, the first of
+game-turn 58, the unit receives 7 more TOE of Matildas if it does not move. If
+it does, it receives them the second OpStage of game-turn 58.)
 
 8 Hussars (4/7): 10 Stuarts
 
@@ -158,137 +122,126 @@ OpStage of game-turn 58.)
 
 5 RTR (4/7): 10 Stuarts
 
-7 Hussars (7/7): 4 Crusader I's, 3 A/13's, 4 A/10's
-6 RTR (7/7): 10 Crusader I's
+7 Hussars (7/7): 4 Crusader I's, 3 A/13's, 4 A/10's 6 RTR (7/7): 10 Crusader I's
 
-2 Hussars (22nd Armor Bde): 9 Crusader I's, 1
-A/10
+2 Hussars (22nd Armor Bde): 9 Crusader I's, 1 A/10
 
 4 CLY (22nd Armor Bde): 9 Crusader I's, 1 A/10
 
-In addition to the above tanks, the following tanks
-(in terms of TOE Points) are considered to be
-broken down in Repair Shops in Alexandria.
+In addition to the above tanks, the following tanks (in terms of TOE Points) are
+considered to be broken down in Repair Shops in Alexandria.
 
 3x Crusader I; 15x Crusader II; 18x Stuart;
 7x Matilda; 8 x Valentine.
 
-Repair on these tanks may not start until the
-scenario's second OpStage.
+Repair on these tanks may not start until the scenario's second OpStage.
 
 [#62_33]*[62.33]* Commonwealth North African Air Force
 
-Planes: These may be distributed freely amongst
-the available air facilities:
+Planes: These may be distributed freely amongst the available air facilities:
 
-Total
-Plane Available Refitted
-Hurricane I's 82 64
-Hurricane IIA's 66 60
-Hurricane IIB's 42 36
-Blenheim IVF's 24 16
-Tomahawks 88 64
-Beaufighters 22 16
-Blenheim IV F's - 142 100
-Wellington IC's 110 80
-Bostons 20 16
-Marylands 32 12
+[%header]
+|===
+|Plane | Available | Refitted
+|Hurricane I's | 82 | 64
+|Hurricane IIA's | 66 | 60
+|Hurricane IIB's | 42 | 36
+|Blenheim IVF's | 24 | 16
+|Tomahawks | 88 | 64
+|Beaufighters | 22 | 16
+|Blenheim IV F's - | 142 | 100
+|Wellington IC's | 110 | 80
+|Bostons | 20 | 16
+|Marylands | 32 | 12
+|===
 
-Pilots: 1 FOUR pilot, 5 THREE pilots, 15 TWO
-pilots and 20 ONE pilots.
+Pilots: 1 FOUR pilot, 5 THREE pilots, 15 TWO pilots and 20 ONE pilots.
 
-Air Facilities: 1 Flying Boat Basin anywhere on
-map-section D or E, and Port Said (off-map).
+Air Facilities: 1 Flying Boat Basin anywhere on map-section D or E, and Port
+Said (off-map).
 
 No Flying Boat Alighting Areas.
 
-Airfields at Maaten Baggush (D 3520), Fuka (D
-3323), Amirya (E 3212), Kabrit (off-map) and
-Tobruk (C 4807).
+Airfields at Maaten Baggush (D 3520), Fuka (D 3323), Amirya (E 3212), Kabrit
+(off-map) and Tobruk (C 4807).
 
-Air Landing Strips at any two hexes in the
-Giarabub Oasis (C 1014) complex, Gerawla (D
-3516), Sidi Haneish (D 3418), El Daba (D 3329),
-Qotafiya (D 3227), Abu Seier and Fayid (off-map,
-i.e., both have been reduced to the ability to perform maintenance ona single squadron).
+Air Landing Strips at any two hexes in the Giarabub Oasis (C 1014) complex,
+Gerawla (D 3516), Sidi Haneish (D 3418), El Daba (D 3329), Qotafiya (D 3227),
+Abu Seier and Fayid (off-map, i.e., both have been reduced to the ability to
+perform maintenance ona single squadron).
 
 SGSU's: As per Air Game rules.
 
-31
-
-32
-
 [#62_34]*[62.34]* Commonwealth Trucks
 
-The Commonwealth Player receives the following
-Second/Third Line (Convoy) Trucks for distribution to any location on game map-sections C thru
-E. However, no more than 10 Light, and/or 20
-Medium and/or 10 Heavy Trucks may be placed
-within five hexes of Tobruk.
+The Commonwealth Player receives the following Second/Third Line (Convoy) Trucks
+for distribution to any location on game map-sections C thru
+E. However, no more than 10 Light, and/or 20 Medium and/or 10 Heavy Trucks may
+be placed within five hexes of Tobruk.
 
-Type Number
-Light 150
-Medium - 400
-Heavy 150
+|===
+| Type | Number
+| Light | 150
+| Medium | 400
+| Heavy | 150
+|===
 
-The Commonwealth Player receives the following Trucks for distribution to any Air Facility (except that in Tobruk): 80 Medium and 20 Heavy.
+The Commonwealth Player receives the following Trucks for distribution to any
+Air Facility (except that in Tobruk): 80 Medium and 20 Heavy.
 
 [#62_35]*[62.35]* Commonwealth Supply
 
-The Commonwealth Player possesses dumps at
-the following locations containing the listed
-amounts of Supplies:
+The Commonwealth Player possesses dumps at the following locations containing
+the listed amounts of Supplies:
 
-Location Ammo Fuel Stores Water
-Tobruk 800 1,500 550 —
-Sidi Barrani 500 1,000 300 700
-Giarabub Oasis 200 400 300 —
-Mersa Matruh 1,000 2,000 400 800
-Bir Khamsa (C 3029) 200 600 50 300
+|===
+| Location | Ammo | Fuel | Stores | Water
+| Tobruk | 800 | 1,500 | 550 | —
+| Sidi Barrani | 500 | 1,000 | 300 | 700
+| Giarabub Oasis | 200 | 400 | 300 | —
+| Mersa Matruh | 1,000 | 2,000 | 400 | 800
+| Bir Khamsa (C 3029) | 200 | 600 | 50 | 300
+|===
 
-In addition, the Allied Player receives dumps at Oxford Circus (C 3532), Bir al Sheferzen (C 3419), Sidi
-Suleiman (C 3721) and any two locations on game
-map section D and any one location on game map
-section C. Only four of these six dumps are active. A
-minimum of 20% the total of each type of the
-following total available Supplies must be placed in
-each active dump: 400 Ammo, 400 Fuel, 200 Stores,
-and 700 Water Points.
+In addition, the Allied Player receives dumps at Oxford Circus (C 3532), Bir al
+Sheferzen (C 3419), Sidi Suleiman (C 3721) and any two locations on game map
+section D and any one location on game map section C. Only four of these six
+dumps are active. A minimum of 20% the total of each type of the following total
+available Supplies must be placed in each active dump: 400 Ammo, 400 Fuel, 200
+Stores, and 700 Water Points.
 
-In additon, the Commonwealth Player receives
-150 Ammo, 350 Fuel, 25 Stores, 50 Water Points at
-each Airfield and 10 Ammo 150 Fuel, 10 Stores and
-20 Water Points at each Air Landing Strip, Flying
-Boat Basin, or Flying Boat Alighting Area. (This
-does not include off-map facilities.)
+In additon, the Commonwealth Player receives 150 Ammo, 350 Fuel, 25 Stores, 50
+Water Points at each Airfield and 10 Ammo 150 Fuel, 10 Stores and 20 Water
+Points at each Air Landing Strip, Flying Boat Basin, or Flying Boat Alighting
+Area. (This does not include off-map facilities.)
 
 [#62_36]*[62.36]* Malta
+
 The following Planes are Available on Malta
 
-Type Total Avail Total Refitted
-Swordfish 3 3
-Hurricane IIB's 28 24
-Beaufighter IC's 8 6
-Hurricane I 10 9
-Hurricane ITA 12 11
-Wellington IC 13 13
+|===
+| Type | Total Avail | Total Refitted
+| Swordfish | 3 | 3
+| Hurricane IIB's|  28 | 24
+| Beaufighter IC's | 8 | 6
+| Hurricane I | 10 | 9
+| Hurricane ITA | 12 | 11
+| Wellington IC | 13 | 13
+|===
 
-The Malta air facilities have an initial capacity of
-14 Squadrons. There are 24 AA Points to place
-where desired. Malta receives 1 Three Pilot, 4 Two
-Pilots, 5 One Pilots.
+The Malta air facilities have an initial capacity of 14 Squadrons. There are 24
+AA Points to place where desired. Malta receives 1 Three Pilot, 4 Two Pilots, 5
+One Pilots.
 
 [#62_37]*[62.37]* Commonwealth Fleet
 
-The Commonwealth Player may place all his warship counters in Alexandria. In addition, note that
-the Italian 10th Light Flotilla is active this scenario
-(See <<30_4>>). However, the 10th Light may not raid
-Alexandria until December.
+The Commonwealth Player may place all his warship counters in Alexandria. In
+addition, note that the Italian 10th Light Flotilla is active this scenario (See
+<<30_4>>). However, the 10th Light may not raid Alexandria until December.
 
 [#62_38]*[62.38]* Reinforcements/Replacements
 
-These are taken as normal, from the tracks and
-production.
+These are taken as normal, from the tracks and production.
 
 [#62_4]
 === AXIS FORCES
@@ -297,26 +250,19 @@ production.
 
 (Hex: Units)
 
-C 4014: 33rd Aufklarungs Bn (R, /5) Trucks: 2
-Light, 5 Medium.
+C4014: 33rd Aufklarungs Bn (R, /5) Trucks: 2 Light, 5 Medium.
 
-C 4015: 3rd Aufklarungs Bn (R; 5 Le)
-Trucks: 2 Light, 5 Medium.
+C4015: 3rd Aufklarungs Bn (R; 5 Le) Trucks: 2 Light, 5 Medium.
 
-C 41082: 32 Ariete Div
-Trucks: 20 Light, 42 Medium, 11 Heavy.
-C 4216: 2ist Panzer Div (consists of: Sth Panzer
+C 41082: 32 Ariete Div Trucks: 20 Light, 42 Medium, 11 Heavy.
 
-Regt 5 Le; 104th Rifle Regt 15; which consists of:
-2nd Bn of the 104th Inf Regt (/5), 8th MG Inf Bn
-(5 Le) and the 708th Heavy Weapons Coy; 39th
-Panzerjager Bn AT; 5 Le; 155th Arty Regt; and
+C 4216: 2ist Panzer Div (consists of: Sth Panzer Regt 5 Le; 104th Rifle Regt 15;
+which consists of: 2nd Bn of the 104th Inf Regt (/5), 8th MG Inf Bn (5 Le) and
+the 708th Heavy Weapons Coy; 39th Panzerjager Bn AT; 5 Le; 155th Arty Regt; and
 the 200th Pioneer Bn 5 13)
 
 Trucks: 12 Light, 45 Medium, 12 Heavy.
-
-C4306: 26th Arty Regt (12 Pav); 57th Arty Regt
-(27 Bre)
+C4306: 26th Arty Regt (12 Pav); 57th Arty Regt (27 Bre)
 Trucks: 4 Light, 4 Medium, 4 Heavy.
 
 C 4406: RECAM (Italian Armored Car Regt)
@@ -325,61 +271,48 @@ Trucks: 5 Light, 15 Medium.
 C 4407: 17th Pavia Div (Det: 26th Arty Regt)
 Trucks: 8 Light, 30 Medium, 4 Heavy.
 
-£3C 4408: 155th Rifle Regt (90 Le)
+C 4408: 155th Rifle Regt (90 Le)
 
 Trucks: 5 Light, 18 Medium, 5 Heavy.
 
 C 4411: 361 Afrika Regt (90 Le)
 Trucks: 5 Light, 6 Medium, 3 Heavy.
 
-C 4507: XXI Corps Arty; 1/2AR; 2/2AR; 3/2AR;
-4/2AR; Ist and 2nd Articelere Regts (all are Arty)
-Trucks: 5 Light, 20 Medium, 6 Heavy.
+C 4507: XXI Corps Arty; 1/2AR; 2/2AR; 3/2AR; 4/2AR; Ist and 2nd Articelere Regts
+(all are Arty) Trucks: 5 Light, 20 Medium, 6 Heavy.
 
-C4606 and/or C4706: 102nd Trento Divi)
-Trucks: 25 Light, 55 Medium, 15 Heavy.
+C4606 and/or C4706: 102nd Trento Divi) Trucks: 25 Light, 55 Medium, 15 Heavy.
 
-C4608: 25 Bologna Div (I) Trucks: 8 Lights, 25
-Medium, 7 Heavy.
+C4608: 25 Bologna Div (I) Trucks: 8 Lights, 25 Medium, 7 Heavy.
 
-C 4610: 90th Light Div (Det: 361 Afrika and 155
-Regts, 3rd Bn of the 255 Regt and 3rd Bn of 347th
-Regt; Less: 190th Arty, 580th Recce, and 190th
-AT. Ergo, the counter consists of the HQ and the
-613th Flak Bn); 200th Rifle Regt (75; consists of
-the 2nd MG Bn 5 Le and the 15/200 Kradschutzen
-Bn 15. Trucks: 5 Light, 21 Medium, 1 Heavy.
+C 4610: 90th Light Div (Det: 361 Afrika and 155 Regts, 3rd Bn of the 255 Regt
+and 3rd Bn of 347th Regt; Less: 190th Arty, 580th Recce, and 190th AT. Ergo, the
+counter consists of the HQ and the 613th Flak Bn); 200th Rifle Regt (75;
+consists of the 2nd MG Bn 5 Le and the 15/200 Kradschutzen Bn 15. Trucks: 5
+Light, 21 Medium, 1 Heavy.
 
-C 4613: 15th Panzer Div (Det: 33rd Recce; Less:
-200th Rifle Regt, 104th Rifle Regt and 140th Arty
-Regt; 33rd Arty Regt has a TOE Strength of 6).
-Trucks: 15 Light, 50 Medium, 16 Heavy.
+C 4613: 15th Panzer Div (Det: 33rd Recce; Less: 200th Rifle Regt, 104th Rifle
+Regt and 140th Arty Regt; 33rd Arty Regt has a TOE Strength of 6).  Trucks: 15
+Light, 50 Medium, 16 Heavy.
 
-C 4804: 27th Brescia Div (Italian Inf; Det: 57th Arty). Trucks: 8 Light, 30 Medium, 4 Heavy.
+C 4804: 27th Brescia Div (Italian Inf; Det: 57th Arty). Trucks: 8 Light, 30
+Medium, 4 Heavy.  Divided approximately equally amongst B 4432, C 4303 amd C
+4102: 101st Trieste Div (I); Trucks: 20 Light, 50 Medium, 15 Heavy.
 
-Divided approximately equally amongst B 4432, C
-4303 amd C 4102: 101st Trieste Div (I); Trucks: 20
-Light, 50 Medium, 15 Heavy.
+Anywhere within the triangle formed by C 3916—Sidi Omar (C 3618)—C 3922: 55th
+Savona Div (Det: II/15 and [11/16 Inf Bns); 1/104 Rifle Bn (15 Panzer); Trucks:
+10 Light, 25 Medium, 5 Heavy.
 
-Anywhere within the triangle formed by C
-3916—Sidi Omar (C 3618)—C 3922: 55th Savona
-Div (Det: II/15 and [11/16 Inf Bns); 1/104 Rifle Bn
-(15 Panzer); Trucks: 10 Light, 25 Medium, 5
-Heavy.
+Within one hex of C 4321: 2,5,6,12, and 13th Coys of the Oasis Bn; III/255 Rifie
+Bn (90 Le); I11/347 Rifle Bn (90 Le); [V Genova MG Bn (Italian); 350 GaF Arty
+Regt; II/15 and IJ1/16 Inf Bns (55 Say); Trucks: 5 Light, 7 Medium, 10 Heavy.
 
-Within one hex of C 4321: 2,5,6,12, and 13th Coys
-of the Oasis Bn; III/255 Rifie Bn (90 Le); I11/347
-Rifle Bn (90 Le); [V Genova MG Bn (Italian); 350
-GaF Arty Regt; II/15 and IJ1/16 Inf Bns (55 Say);
-Trucks: 5 Light, 7 Medium, 10 Heavy.
-
-Attached to any Italian Inf Div(s): III(M) and
-LII(M) tank Bns; Trucks (each tank battalion): 2
-Light, 6 Medium.
+Attached to any Italian Inf Div(s): III(M) and LII(M) tank Bns; Trucks (each
+tank battalion): 2 Light, 6 Medium.
 
 [#62_42]*[62.42]* Axis Tanks
-The Axis Player assigns German tank TOE
-Strength Points as follows:
+
+The Axis Player assigns German tank TOE Strength Points as follows:
 
 Unit Tanks
 
@@ -405,22 +338,27 @@ LIi(M) 6 M13/40's
 K(L) 5 CV33's
 11(L) 5 CV33's
 
-(Note: Over 100 additional Light Tanks—usually
-CV 33's and their ilk—were spread around other
-Italian units, assigned to Recce units, Bersagliere
-regiments, HQ's, etc. This information is "factored" into the strengths/TOE of those units.)
+(Note: Over 100 additional Light Tanks—usually CV 33's and their ilk—were spread
+around other Italian units, assigned to Recce units, Bersagliere regiments,
+HQ's, etc. This information is "factored" into the strengths/TOE of those
+units.)
 
 [#62_43]*[62.43]* Axis Air Strength
-The Axis Player receives the following planes. The
-Axis Player receives 23 SGSU's.
 
-Aircraft Available Refitted
-MC 200 35 20
-Cr 42 23 8
-G50 28 20
-BR 20 29 15
-Ju87D 9 5
-SM79 21 10
+The Axis Player receives the following planes. The Axis Player receives 23
+SGSU's.
+
+[%header]
+|===
+|Aircraft| Available| Refitted
+
+|MC| 200| 35| 20
+|Cr| 42| 23| 8
+|G50| 28| 20
+|BR| 20| 29| 15
+|Ju87D| 9| 5
+|SM79| 21| 10
+|===
 
 The Axis Player receives the following Italian
 Pilots:
@@ -432,13 +370,15 @@ One 11
 The Axis Player receives 33 German SGSU's and
 the following planes:
 
-Aircraft Available Refitted
-Ju8ssD 83 45
-Hell1 27 15
-Ju87D 94 90
-Bf109E 19 13
-Bfl09F 40 27
-BFi10C 23 13
+|===
+|Aircraft| Available| Refitted
+|Ju88D| 83| 45
+|He111| 27| 15
+|Ju87D| 94| 90
+|Bf109E| 19| 13
+|Bfl09F| 40| 27
+|BFi10C| 23| 13
+|===
 
 The German Player receives the following pilots:
 
@@ -449,98 +389,87 @@ Three 3
 Two 6
 One 12
 
-The Axis Player has Airfields at Benina
-(A4829), Derna (B5925), Timimi (B5229), Gazala
-(B4933), Gambut (C4414), Martuba (B5526),
-Benghazi (A4827), Barce (B5504) and Maraua
-(B5410). The Axis Player has 3 Air Landing Strips
-anywhere on maps A thru C. The Axis Player has
-one Flying Boat Basin anywhere on Map A or B.
-In addition, he may base planes in Crete/Italy/
-Sicily within the restrictions of Case <<43_1>>
-[#62_44]*[62.44]* .Axis Trucks
-The Axis Player receives the
+The Axis Player has Airfields at Benina (A4829), Derna (B5925), Timimi (B5229),
+Gazala (B4933), Gambut (C4414), Martuba (B5526), Benghazi (A4827), Barce (B5504)
+and Maraua (B5410). The Axis Player has 3 Air Landing Strips anywhere on maps A
+thru C. The Axis Player has one Flying Boat Basin anywhere on Map A or B.  In
+addition, he may base planes in Crete/Italy/ Sicily within the restrictions of
+Case <<43_1>>
+
+[#62_44]*[62.44]* Axis Trucks
+
+The Axis Player receives the following
 Second/Third Line (In Convoy) Trucks:
 
-following
 
-Light Medium Heavy
-Anywhere on game
 
-maps A&B 45 120 20
-Tripoli 20 35 10
-Nofilia 20 25 10
-Derna 15 20 10
+|===
+| | Light | Medium | Heavy
+|Anywhere on game maps A&B | 45 | 120 | 20
+|Tripoli | 20 | 35 | 10
+|Nofilia | 20 | 25 | 10
+|Derna | 15 | 20 | 10
+|===
 
-The Axis Player receives 30 Light and 60 Medium
-trucks for distribution among his air facilities.
+The Axis Player receives 30 Light and 60 Medium trucks for distribution among
+his air facilities.
+
 [#62_45]*[62.45]* Axis Supply
 
-The Axis Player possesses dumps at the following
-locations containing the listed amounts of Supplies:
+The Axis Player possesses dumps at the following locations containing the listed
+amounts of Supplies:
 
-Ammo Fuel Stores Water
-Tripoli 200 1,300 350 —
-Nofilia 500 800 500 250
-el Agheila 150 450 350 400
-Benghazi 650 2,200 700 _
-Mechili 500 1,700 150 600
-Derna 300 2,500 100 300
+[%header]
+|===
+| Ammo | Fuel | Stores | Water
+| Tripoli | 200 | 1,300 | 350 | —
+| Nofilia | 500 | 800 | 500 | 250
+| el | Agheila | 150 | 450 | 350 | 400
+| Benghazi | 650 | 2,200 | 700 | _
+| Mechili | 500 | 1,700 | 150 | 600
+| Derna | 300 | 2,500 | 100 | 300
+|===
 
-In addition the Axis Player receives dumps at
-Gazala (B4933) Rotunda Segnali (B 4432) and any
-three locations on game map section B. Only three
-of these five dumps may be active. A minimum of
-20% of the following total available Supplies of
-700 Ammo, 1,350 Fuel, 150 Stores and 400 Water
-Points must be placed in each active dump.
+In addition the Axis Player receives dumps at Gazala (B4933) Rotunda Segnali (B
+4432) and any three locations on game map section B. Only three of these five
+dumps may be active. A minimum of 20% of the following total available Supplies
+of 700 Ammo, 1,350 Fuel, 150 Stores and 400 Water Points must be placed in each
+active dump.
 
-In addition, the Axis Player receives 150 Ammo,
-350 Fuel, 25 Stores and 50 Water Points at each
-Airfield (excepting Tripoli/Tunesia).
+In addition, the Axis Player receives 150 Ammo, 350 Fuel, 25 Stores and 50 Water
+Points at each Airfield (excepting Tripoli/Tunesia).
 
-[#62_46]*[62.46]* All Axis Coastal Shipping units are
-available, and may be distributed among the parts
-of Maps A, BandC.
+[#62_46]*[62.46]* All Axis Coastal Shipping units are available, and may be
+distributed among the parts of Maps A, BandC.
 
-[#62_47]*[62.47]* Axis Player must plan Replacements for
-all November OpStages in advance of starting the
-game. After that, he plans normally.
+[#62_47]*[62.47]* Axis Player must plan Replacements for all November OpStages
+in advance of starting the game. After that, he plans normally.
 
 [#62_5]
-=== CONSTRUCTION AT THE START
-OF THE SCENARIO
+=== CONSTRUCTION AT THE START OF THE SCENARIO
 
-There are no minefields. All ports are at full
-(listed) Efficiency. All hexes adjacent to Bardia
-contain Level 1 Fortifications. All hexes adjacent
-to Tobruk contain Level 2 Fortifications.
+There are no minefields. All ports are at full (listed) Efficiency. All hexes
+adjacent to Bardia contain Level 1 Fortifications. All hexes adjacent to Tobruk
+contain Level 2 Fortifications.
 
-The railroad extends past Mersa Matruh.and ends
-in hex C 3430. From that point, the pipeline extends in a straight line as far as Birkhamsa (C
-3029). All unfinished roads are built with the exception of the Siwa Track, which is completed to
-only twenty hexes from Mersa Matruh (i.e., the
-hex the 1st South African Road Construction Battalion occupies, D2001).
+The railroad extends past Mersa Matruh.and ends in hex C 3430. From that point,
+the pipeline extends in a straight line as far as Birkhamsa (C 3029). All
+unfinished roads are built with the exception of the Siwa Track, which is
+completed to only twenty hexes from Mersa Matruh (i.e., the hex the 1st South
+African Road Construction Battalion occupies, D2001).
 
-There is a Temporary Repair Facility in Tobruk.
-The Commonwealth Player may also place an additional Temporary facility in any village/city he
-wishes. As usual, Alexandria and Cairo contain
-Major Repair facilities.
+There is a Temporary Repair Facility in Tobruk.  The Commonwealth Player may
+also place an additional Temporary facility in any village/city he wishes. As
+usual, Alexandria and Cairo contain Major Repair facilities.
 
-Temp
-Repair
-Facility
-
-There is a Temporary Repair facility in Derna,
-plus one in any other village or city. There is a Major Repair facility in Benghazi.
+There is a Temporary Repair facility in Derna, plus one in any other village or
+city. There is a Major Repair facility in Benghazi.
 
 [#62_6]
-=== AIR & LOGISTICS GAMES
-ABSTRACTIONS
+=== AIR & LOGISTICS GAMES ABSTRACTIONS
 
-This case covers the adjustments needed in addito those given in Case <<59_6>> in order to play this
-scenario without the Air and/or Logistics
-Game(s).
+This case covers the adjustments needed in addito those given in Case <<59_6>>
+in order to play this scenario without the Air and/or Logistics Game(s).
 
 [#62_61]*[62.61]* Air Abstracted
 
@@ -550,129 +479,155 @@ Game(s).
 
 (Land Game Only):
 
-A. The Players' ability to bring in Motorization
-Points is equal to their respective ability's to bring
-in Medium Truck Points (i.e., each Medium Truck
+A. The Players' ability to bring in Motorization Points is equal to their
+respective ability's to bring in Medium Truck Points (i.e., each Medium Truck
 Point equals one Motorization Point).
 
 B. Axis Initial Supply Status: Case <<62_45>> is replaced by the following:
+Regular Each with Location Supply Units Ammo Fuel Tripoli (box) 2 20 60 Nofilia
+(A2703) 3 30 25 el Agheila (A1816) 1 30 50 Benghazi (A4827) 4 30 60 Mechili
+(B4921) 3 30 60 Derna (B5925) 4 15 60 Group 1* 3 30 50
 
-Regular Each with
-Location Supply Units Ammo Fuel
-Tripoli (box) 2 20 60
-Nofilia (A2703) 3 30 25
-el Agheila (A1816) 1 30 50
-Benghazi (A4827) 4 30 60
-Mechili (B4921) 3 30 60
-Derna (B5925) 4 15 60
-Group 1* 3 30 50
+*These, and in addition 2 dummy supply units, are to be placed in any of the
+following locations in any distribution at the Axis Player's choice: Gazala
+(B4933), Rotunda Segnali (B4432) and any location(s) on game map-section "B".
 
-*These, and in addition 2 dummy supply units, are
-to be placed in any of the following locations in
-any distribution at the Axis Player's choice:
-Gazala (B4933), Rotunda Segnali (B4432) and any
-location(s) on game map-section "B".
+C. Commonwealth Initial Supply Status: Case <<62_35>> is replaced by the following:
 
-Cc. Commonwealth Initial Supply Status: Case
-62.35 is replaced by the following:
+[cols="3,1,1,1"]
+|===
+|Location |Regular Supply Units |Each with Ammo |A
 
-Regular Each with
+|Tobruk (C4807)
+|4
+|40
+|40
 
-Location Supply Units Ammo +t
-Tobruk (C4807) 4 40 40
-Sidi Baranni (C4131) 3 30 50
-Mersa Matruh:
+|Sidi Baranni (C4131)
+|3
+|30
+|50
 
-(D3714) 5 40 30
-Giarabub Oasis
+|Mersa Matruh (D3714)
+|5
+|40
+|30
 
-(C1014) 1 40 50
-Bar Khamsa (C3029) 1 30 60
-Group 1* 4 20 15
+|Giarabub Oasis (C1014)
+|1
+|40
+|50
 
-*These, and in addition 2 dummy supply units,
-may be distributed among the following locations
-at the Commonwealth Player's choice with the
-restriction that no more than one regular supply
-unit may be placed in any hex: Oxford Circus
-(C3532), Bir al Scheferzen (C3419), Sidi Suleiman
-(C3721) and. any two. hexes (other than Mersa
-Matruh) on game-map-section "D". In addition,
-Cairo and Alexandria each contain two regular
-py units, each with 40 Ammo and 60 Fuel Points.
+|Bar Khamsa (C3029)
+|1
+|30
+|60
+
+|Group 1*
+|4
+|20
+|15
+|===
+
+*These, and in addition 2 dummy supply units, may be distributed among the
+following locations at the Commonwealth Player's choice with the restriction
+that no more than one regular supply unit may be placed in any hex: Oxford
+Circus (C3532), Bir al Scheferzen (C3419), Sidi Suleiman (C3721) and. any two.
+hexes (other than Mersa Matruh) on game-map-section "D". In addition, Cairo and
+Alexandria each contain two regular py units, each with 40 Ammo and 60 Fuel
+Points.
 
 [#62_63]*[62.63]* Logistics Abstracted
 
 (Land & Air Games):
 
-A. The Players' ability to bring in Motorization
-Points is equal to their respective abilities to bring
-in Medium plus Heavy Trucks (i.e., each Medium
-and each Heavy Truck is equal to one Motorization Point).
+A. The Players' ability to bring in Motorization Points is equal to their
+respective abilities to bring in Medium plus Heavy Trucks (i.e., each Medium and
+each Heavy Truck is equal to one Motorization Point).
 
-B. Axis Initial Supplies: As in <<62_62>> "B" above
-plus 1 regular supply unit at each Axis airfield (except those off-map) with 30 Ammo and 40 Fuel
-Points.
+B. Axis Initial Supplies: As in <<62_62>> "B" above plus 1 regular supply unit
+at each Axis airfield (except those off-map) with 30 Ammo and 40 Fuel Points.
 
-C. Commonwealth Initial Supplies: As in <<62_62>>
-““C”? above plus | regular supply unit at each airfield (except Kabrit) with 30 Ammo and 40 Fuel
-Points and | regular supply unit at each remaining
-air facility (except off-map) each with 5 Ammo
-and 15 Fuel Points.
+C. Commonwealth Initial Supplies: As in <<62_62>> "C" above plus | regular
+supply unit at each airfield (except Kabrit) with 30 Ammo and 40 Fuel Points
+and | regular supply unit at each remaining air facility (except off-map) each
+with 5 Ammo and 15 Fuel Points.
 
 [#62_7]
 === INITIATIVE
 
-Historically, the Commonwealth Player should
-have the Initiative for the first OpStage. However,
-the Players may roll in the normal manner to
-determine who has initiative in that OpStageif they
-prefer. In each OpStage after the first, the Players
-roll the die as per normal procedure.
+Historically, the Commonwealth Player should have the Initiative for the first
+OpStage. However, the Players may roll in the normal manner to determine who has
+initiative in that OpStageif they prefer. In each OpStage after the first, the
+Players roll the die as per normal procedure.
 
 [#62_8]
 === VICTORY CONDITIONS
 
-Players amass points for controlling geographical
-locations. The Player with the most points subtracts the other player's points from his and then
-determines the level of victory, if any.
+Players amass points for controlling geographical locations. The Player with the
+most points subtracts the other player's points from his and then determines the
+level of victory, if any.
 
-The Players receive Victory Points for controlling
-certain cities/villages. The number of points
-depends on the location and the player controlling.
-Control of a city/village means occupying that
-city/village with a combat unit of any strength.
-That unit must have sufficient supplies to exist for
-one month and Ammo for one week (one round
-each OpStage).
+The Players receive Victory Points for controlling certain cities/villages. The
+number of points depends on the location and the player controlling.  Control of
+a city/village means occupying that city/village with a combat unit of any
+strength.  That unit must have sufficient supplies to exist for one month and
+Ammo for one week (one round each OpStage).
 
-Points Points
+[cols="3,1,1"]
+|===
+|City/Village |Points for Axis Control |Points for CW Control
 
-for Axis for Cw
-City/ Village Control Control
-Tobruk 6 4
-Bardia 2 3
-Sollum 2 2
-Halfaya Pass (both hexes) 1 1
-Ft. Maddelenna 1 2
-Sidi Biranni 3 0
-Giarabub 1 1
-Siwa 2 1
-Ft. Capuzzo 1 1
+|Tobruk
+|6
+|4
 
-Point Differential Level of Victory
-10+ Strategic
+|Bardia
+|2
+|3
 
-6-9 Decisive
+|Sollum
+|2
+|2
 
-1-5 Tactical
+|Halfaya Pass (both hexes)
+|1
+|1
 
-0 Draw/Standoff
+|Ft. Maddelenna
+|1
+|2
 
-Players may wish to compare losses in men and
-tanks (as well as air, although that is not that
-revealing) to see how well they did, in comparison
-to each other, in gaining or not gaining their objectives. Players may wish to subjectively raise or
-lower their victory level as per this. However,
-losses can be misleading, so this type of condition
-is "officially" left out of the conditions here.
+|Sidi Biranni
+|3
+|0
+
+|Giarabub
+|1
+|1
+
+|Siwa
+|2
+|1
+
+|Ft. Capuzzo
+|1
+|1
+|===
+
+
+[%header]
+|===
+| Point Differential | Level of Victory
+| 10+ | Strategic
+| 6-9 | Decisive
+| 1-5 | Tactical
+| 0 | Draw/Standoff
+|===
+
+Players may wish to compare losses in men and tanks (as well as air, although
+that is not that revealing) to see how well they did, in comparison to each
+other, in gaining or not gaining their objectives. Players may wish to
+subjectively raise or lower their victory level as per this. However, losses can
+be misleading, so this type of condition is "officially" left out of the
+conditions here.
